fix for overflow images

--- a/src/scss/frontend.scss
+++ b/src/scss/frontend.scss
@@ -169,6 +169,7 @@
 			justify-self: center;
 			max-width: 90%;
 			max-height: 100%;
+			overflow: hidden;
 		}
 
 		h3 {
